Fix windows being behind dock until minimizing done
Why must CSS transitions be this inconsistent across browsers aaaaaa

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ html,body{
   bottom:0;
   right:0;
   left:0;
-  font-size:4vmax;
+  font-size:5vmin;
   font-weight:100;
   color:white;
   background:#2196F3;
